feat(cloud): api keys settings
